--- a/afsanaportfolioindex.html
+++ b/afsanaportfolioindex.html
@@ -27,6 +27,18 @@
         </div>
         <div class="half-width"><img src="286125149_416925207008112_9106641472981842379_n.jpg" alt=""></div>
     </section>
+    <section class="dream-big">
+        <div class="half-width"><img src="285628301_401524075355760_6466308103773086899_n.jpg" alt=""></div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web developer</h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" target="_blank"
+                href="https://programminghero1.github.io/developer-portfolio/">Download Resume</a>
+        </div>
+
+    </section>
 </body>
 
 </html>
